feat(webpack.config): add title of index.html

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build": "webpack && sh ./scripts/cp.sh"
   },
   "author": "",
   "license": "ISC",
