feat(webpack.config.js): add hash

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "webpack && sh ./scripts/cp.sh"
+    "build": "rm ./build/* && webpack && sh ./scripts/cp.sh"
   },
   "author": "saber2pr",
   "license": "ISC",
