--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
   },
   "dependencies": {
     "@saber2pr/redux": "0.0.4",
+    "@saber2pr/request": "^0.1.2",
     "@saber2pr/router": "0.0.7",
     "@saber2pr/types-github-api": "0.0.7",
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
-    "axios": "^0.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
